# outflux

./: .gitignore  README.md  delete_from_influx.py  outflux.py  pyproject.toml  requirements.txt
outflux/: __main__.py  cli.py  outflux.py
tests/: outflux_test.py
