[project]
name = "outflux"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "requests~=2.32.3"
]

[project.optional-dependencies]
dev = [
  "hypothesis",
  "mypy",
  "pytest",
  "ruff",
]

[project.scripts]
outflux = "outflux.cli:main"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
install_types = true
non_interactive = true
python_version = "3.9"
strict = true
